# quantbot

./: .env.example  .env.production.example  .gitignore  FLOW_HANDOFF.md  PLAN.md  README.md  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_holdings_change.py  0003_holding_key_and_collection_lock.py  0004_holding_security_id.py  0005_collection_item_log.py  0006_etf_exchange_aum.py  0007_security_price.py  0008_signal_daily.py  0009_signal_outcome.py  0010_etf_flow_daily.py
backend/app/: config.py  main.py
backend/app/application/: ports.py
backend/app/domain/: entities.py  repositories.py  value_objects.py
backend/app/interfaces/: deps.py
backend/app/seed/: active_etfs.json
backend/tests/: fakes.py  test_admin_api.py  test_ark_provider.py  test_avantis_provider.py  test_capital_group_provider.py  test_collect_pipeline.py  test_collection_item_log.py  test_dimensional_provider.py  test_etf_service.py  test_evaluation_service.py  test_flow_service.py  test_holding_change_service.py  test_holding_repository_contract.py  test_holdings_base.py  test_ishares_provider.py  test_jpmorgan_provider.py  test_scheduler.py  test_signal_service.py  test_spdr_provider.py  test_trowe_price_provider.py  test_underlying_security_service.py  test_universe_service.py  test_virtus_provider.py
backend/tests/fixtures/: ark_arkk.csv  avantis_avuv.html  capital_group_cggr.xlsx  dimensional_dfac.csv  ishares_dynf.csv  spdr_totl.xlsx  (+4 more)
(+70 files in other folders)
