[project]
name = "quantbot-backend"
version = "0.1.0"
description = "Active ETF collection and display API"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.13.0",
  "aiosqlite>=0.20.0",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "uvicorn[standard]>=0.30.0",
  "yfinance>=0.2.40",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
